Update index.html by changing photo link

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <!-- Section Accueil -->
     <section id="home" class="intro">
         <div class="content">
-            <img id="photo" src="images/mog.jpg" alt="profile">
+            <img id="photo" src="/mog.jpg" alt="profile">
             <h1>Bonjour, je suis MODOU GUEYE</h1>
             <p>IT Consultant, formateur Cloud et passionné par la technologie.</p>
             <a href="#projects" class="btn">Voir mes projets</a>
