Update index.html by adding mobile phone and add projects

--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
             <img id="photo" src="/mog.jpg" alt="profile">
             <h1>Bonjour, je suis MODOU GUEYE</h1>
             <p>IT Consultant, formateur Cloud et passionné par la technologie.</p>
+            <p>+212 - 695 - 97 - 71 - 80 </p>
             <a href="#projects" class="btn">Voir mes projets</a>
         </div>
     </section>
@@ -37,7 +38,17 @@
             <div class="project-card">
                 <img src="https://via.placeholder.com/300" alt="Projet 1">
                 <h3>Projet 1</h3>
-                <p>Description du projet 1.</p>
+                <div class="col-sm">
+                <h2>Web site</h2>
+                <div style="position: relative; width: 100%; height: 0; padding-top: 56.2500%;
+                padding-bottom: 48px; box-shadow: 0 2px 8px 0 rgba(63,69,81,0.16); margin-top: 1.6em; margin-bottom: 0.9em; overflow: hidden;
+                border-radius: 8px; will-change: transform;">
+                  <iframe loading="lazy" style="position: absolute; width: 100%; height: 100%; top: 0; left: 0; border: none; padding: 0;margin: 0;"
+                  src="https://doumova.github.io/REGARD-DE-FEMME/">
+                </iframe>
+                </div>
+                  <a href="https://doumova.github.io/REGARD-DE-FEMME/" target="_blank" rel="noopener">REGARD DE FEMME</a> par Modou Gueye
+              </div>
             </div>
             <div class="project-card">
                 <img src="https://via.placeholder.com/300" alt="Projet 2">
