Update index.html add mailto on the button

--- a/index.html
+++ b/index.html
@@ -75,6 +75,7 @@
             <textarea id="message" name="message" required></textarea>
 
             <button type="submit" class="btn">Envoyer</button>
+            <a href="mailto:doumogueye.mg@gmail.com" class="btn">Envoyer un email à MODOU GUEYE</a>
         </form>
     </section>
 
