--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                 <div style="position: relative; width: 100%; height: 0; padding-top: 56.2500%;
                 padding-bottom: 48px; box-shadow: 0 2px 8px 0 rgba(63,69,81,0.16); margin-top: 1.6em; margin-bottom: 0.9em; overflow: hidden;
                 border-radius: 8px; will-change: transform;">
-                  <iframe loading="lazy" style="position: absolute; width: 100%; height: 100%; top: 0; left: 0; border: none; padding: 0;margin: 0;"
+                  <iframe loading="lazy" style="position: absolute; width: auto; height: 100%; top: 0; left: 0; border: none; padding: 0;margin: 0;"
                   src="https://doumova.github.io/REGARD-DE-FEMME/">
                 </iframe>
                 </div>
@@ -49,12 +49,12 @@
               </div>
             </div>
             <div class="project-card">
-                <img src="https://via.placeholder.com/300" alt="Projet 2">
+                
                 <h3>Projet 2</h3>
                 <p>Description du projet 2.</p>
             </div>
             <div class="project-card">
-                <img src="https://via.placeholder.com/300" alt="Projet 3">
+                
                 <h3>Projet 3</h3>
                 <p>Description du projet 3.</p>
             </div>
