Update index.html add address in morocco

--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
             <h1>Bonjour, je suis MODOU GUEYE</h1>
             <p>IT Consultant, formateur Cloud et passionné par la technologie.</p>
             <p>+212 - 695 - 97 - 71 - 80 </p>
+            <p>Casablanca, Maroc </p>
             <a href="#projects" class="btn">Voir mes projets</a>
         </div>
     </section>
