Update index.html add some edition

--- a/index.html
+++ b/index.html
@@ -72,13 +72,7 @@
         <h2>FeedBacks & commentaires</h2>
         <div class="project-gallery">
             <div class="project-card">
-                <h3>Client satisfait</h3>
-                <p>Allianz Trade</p>
-                <img id="photo" src="/mog.jpg" alt="profile">
-            </div>
-            <div class="project-card">
-                
-                <h3>Comentaire</h3>
+                <h3>Commentaire</h3>
                 <p>MERYEME EJJRATLI</p>
                 <p>Je vous recommande vivement Modou, il est professionnel , avec un bon sens du relationnel, de l’écoute et de l’analyse .
                 Sa rigueur et sa volonté d’apprendre de nouvelles technologies sont aussi des qualités remarquables dans son travail.
@@ -94,8 +88,8 @@
                 </p>
             </div>
              <div class="project-card">
-                
-                <h3>Alioune Kassé</h3>
+                 <h3>Commentaire</h3>
+                <p>Alioune Kassé</p>
                 <p>
                     Je vous recommande vivement Modou GUEYE pour toute opportunité ou projet nécessitant une expertise en administration Office 365 et en services cloud AWS. Modou GUEYE a démontré des compétences exceptionnelles et un dévouement constant dans ces domaines.
                     Compétences en Administration Office 365,AWS et vous pouvez lire la suite 
