Update index.html edit formation

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
             <div class="project-card">
                 
                 <h3>Formateur</h3>
-                <img id="photo" src="/training-aws.png" alt="training-aws">
+                <img src="/training-aws.png" alt="training-aws">
                 </div>
               </div>
             <div class="project-card">
