--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
     }
   </style>
 
-    <section id="projects" class="projects">
+    <section class="projects">
        <header>
     <h1>Deviens Expert AWS dès Aujourd'hui</h1>
     <p>Maîtrise le Cloud Computing et lance ta carrière dans la tech avec une formation complète en ligne</p>
