--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
         <nav>
             <ul>
                 <li><a href="#home">Accueil</a></li>
+                <li><a href="/training.html">Formation</a></li>
                 <li><a href="#projects">Projets</a></li>
                 <li><a href="#contact">Contact</a></li>
             </ul>
