--- a/training.html
+++ b/training.html
@@ -62,15 +62,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Portfolio personnel de MODOU GUEYE">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <title>Portfolio de MODOU GUEYE</title>
+    <title>Formation AWS</title>
     <link rel="stylesheet" href="styles.css">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
         <nav>
             <ul>
-                <li><a href="#home">Accueil</a></li>
+                <li><a href="/index.html">Accueil</a></li>
                 <li><a href="/training.html">Formations</a></li>
-                <li><a href="#projects">Projets</a></li>
-                <li><a href="#contact">Contact</a></li>
+                <li><a href="/index.html">Projets</a></li>
+                <li><a href="/index.html">Contact</a></li>
             </ul>
         </nav>
     </header>
