Update training.html a

--- a/training.html
+++ b/training.html
@@ -1,9 +1,39 @@
 <!DOCTYPE html>
 <html lang="fr">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Formation AWS - Deviens Expert Cloud</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Portfolio personnel de MODOU GUEYE">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <title>Formations AWS</title>
+    <link rel="stylesheet" href="styles.css">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+</head>
+<body>
+    <!-- Navbar -->
+    <header>
+        <nav>
+            <ul>
+                <li><a href="/index.html">Accueil</a></li>
+                <li><a href="/training.html">Formation</a></li>
+                <li><a href="/index.html">Projets</a></li>
+                <li><a href="/index.html">Contact</a></li>
+            </ul>
+        </nav>
+    </header>
+
+    <!-- Section Accueil -->
+    <section id="home" class="intro">
+        <div class="content">
+            <img id="photo" src="/mog.jpg" alt="profile">
+            <h1>Bonjour, c'est MODOU GUEYE</h1>
+            <p>Consultant IT, formateur Cloud et passionné par la technologie.</p>
+            <p>+212 - 695 - 97 - 71 - 80 </p>
+            <p>Casablanca, Maroc </p>
+            <a href="#projects" class="btn">Voir mes projets</a>
+        </div>
+    </section>
+  
   <style>
     body {
       margin: 0;
@@ -57,28 +87,9 @@
   </style>
 </head>
 <body>
-<header>
-  <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Portfolio personnel de MODOU GUEYE">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <title>Formation AWS</title>
-    <link rel="stylesheet" href="styles.css">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
-        <nav>
-            <ul>
-                <li><a href="/index.html">Accueil</a></li>
-                <li><a href="/training.html">Formations</a></li>
-                <li><a href="/index.html">Projets</a></li>
-                <li><a href="/index.html">Contact</a></li>
-            </ul>
-        </nav>
-    </header>
-
-  <header>
     <h1>Deviens Expert AWS dès Aujourd'hui</h1>
     <p>Maîtrise le Cloud Computing et lance ta carrière dans la tech avec une formation complète en ligne</p>
-  </header>
+
 
   <div class="container">
     <section class="features">
