Update training.html header

--- a/training.html
+++ b/training.html
@@ -30,7 +30,7 @@
             <p>Consultant IT, formateur Cloud et passionné par la technologie.</p>
             <p>+212 - 695 - 97 - 71 - 80 </p>
             <p>Casablanca, Maroc </p>
-            <a href="#projects" class="btn">Voir mes projets</a>
+            <a href="/index.html" class="btn">Voir mes projets</a>
         </div>
     </section>
   
@@ -85,13 +85,13 @@
       background-color: #2563eb;
     }
   </style>
-
-    <h1>Deviens Expert AWS dès Aujourd'hui</h1>
-    <p>Maîtrise le Cloud Computing et lance ta carrière dans la tech avec une formation complète en ligne</p>
 </head>
 <body>
     
-
+<header>
+    <h1>Deviens Expert AWS dès Aujourd'hui</h1>
+    <p>Maîtrise le Cloud Computing et lance ta carrière dans la tech avec une formation complète en ligne</p>
+</header>
 
   <div class="container">
     <section class="features">
@@ -123,7 +123,7 @@
     </section>
 
     <div class="cta">
-      <a href="#">🔥 Je m'inscris maintenant</a>
+      <a href="https://groupemiage.net/formations-intensives-speciales/">🔥 Je m'inscris maintenant</a>
     </div>
   </div>
 </body>
