Revise contact details and certifications in index.html
Updated contact information and added a new certification.

--- a/index.html
+++ b/index.html
@@ -168,16 +168,17 @@
       <h2>Certifications</h2>
       <ul>
         <li>✅ AWS Certified Cloud Practitioner</li>
-        <li>✅ Microsoft Azure Fundamentals (AZ-900)</li>
+        <li>✅ Microsoft Azure Fundamentals (MS-900) en preparation</li>
       </ul>
     </section>
 
     <section id="contact">
       <h2>Contact</h2>
       <div class="contact-info">
-        <p>📧 <strong>Email :</strong> contact@modougueye.tech</p>
-        <p>🌐 <strong>Site web :</strong> www.modougueye.tech</p>
-        <p>💼 <strong>LinkedIn :</strong> <a href="https://linkedin.com/in/modougueye" target="_blank">linkedin.com/in/modougueye</a></p>
+         <p>🌐 <strong>Site web :</strong>+212 695 97 71 80 / +221 77 097 80 42 </p>
+        <p>📧 <strong>Email :</strong> doumogueye.mg@gmail.com / doumogueye.mg@outlook.fr</p>
+        <p>🌐 <strong>Site web :</strong> https://doumova.github.io/#home </p>
+        <p>💼 <strong>LinkedIn :</strong> <a href="https://www.linkedin.com/in/modou-gueye-525664127/" target="_blank">linkedin.com/in/MODOU GUEYE</a></p>
       </div>
     </section>
 
@@ -189,3 +190,4 @@
 
 </body>
 </html>
+
