Fix HTML encoding issues in index.html
contact

--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
     <section id="contact">
       <h2>Contact</h2>
       <div class="contact-info">
-         <p>🌐 <strong>Site web :</strong>+212 695 97 71 80 / +221 77 097 80 42 </p>
+         <p>🌐 <strong>Whatsapp :</strong>+212 695 97 71 80 / +221 77 097 80 42 </p>
         <p>📧 <strong>Email :</strong> doumogueye.mg@gmail.com / doumogueye.mg@outlook.fr</p>
         <p>🌐 <strong>Site web :</strong> https://doumova.github.io/#home </p>
         <p>💼 <strong>LinkedIn :</strong> <a href="https://www.linkedin.com/in/modou-gueye-525664127/" target="_blank">linkedin.com/in/MODOU GUEYE</a></p>
@@ -190,4 +190,5 @@
 
 </body>
 </html>
+
 
