--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
 <body>
 
   <header>
-    <h1>Modou Gueye</h1>
+    <h1>MODOU GUEYE</h1>
     <p>Administrateur Systèmes & Réseaux | AWS Certified | Passionné de Cybersécurité</p>
   </header>
 
@@ -146,7 +146,22 @@
     </section>
 
     <section id="projects">
-      <h2>Projets récents</h2>
+      <h2>Projets</h2>
+      <div class="project">
+        <h3>☁️ Migration De Windows 10 vers Windows 11</h3>
+        <p>Installation et configuration du système Windows 11 pour plus de 50 utilisateurs</p>
+        <p>Utilisation de Intune</p>
+      </div>
+      <div class="project">
+        <h3>Configuration des Téléphones portables</h3>
+        <p>Enrollement des téléphones sur le système et déployer l'image de la boite</p>
+        <p>Configuration des services de Microsoft : Teams, Outlook, OneDrive etc.</p>
+      </div>
+      <div class="project">
+        <h3>☁️ Migration De share Drives vers SharePoint</h3>
+        <p>Planification et configuration des espaces de stockages</p>
+        <p>Dépôt des donnés et donner accès aux ayant droits</p>
+      </div>
 
       <div class="project">
         <h3>🖥️ Déploiement d’un serveur Windows pour une PME</h3>
@@ -190,6 +205,7 @@
 
 </body>
 </html>
+
 
 
 
