--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Portfolio | Modou Gueye - Administrateur Systèmes & Réseaux</title>
+  <title>Portfolio | MODOU GUEYE - IT SUPPORT ENGINEER | DEVOPS | CYBERSECURITY</title>
   <style>
     /* -------- RESET -------- */
     * {
@@ -120,7 +120,7 @@
 
   <header>
     <h1>MODOU GUEYE</h1>
-    <p>Administrateur Systèmes & Réseaux | AWS Certified | Passionné de Cybersécurité</p>
+    <p>IT SUPPORT ENGINEER | AWS Certified | DEVOPS | Passionné de Cybersécurité</p>
   </header>
 
   <div class="container">
@@ -205,6 +205,7 @@
 
 </body>
 </html>
+
 
 
 
